force-app/main/default/objects/API_Routing__mdt/API_Routing__mdt.object-meta.xml
<CustomObject>
    <description>API Route 관리 메타데이터</description>
    <label>API Routing</label>
</CustomObject>