force-app/main/default/objects/API_Routing__mdt/fields/ExampleParam__c.field-meta.xml
<CustomField>
    <fullName>ExampleParam__c</fullName>
    <label>ExampleParam</label>
    <type>TextArea</type>
</CustomField>