force-app/main/default/objects/API_Routing__mdt/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <label>Http Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>