force-app/main/default/objects/API_Routing__mdt/fields/InterfaceID__c.field-meta.xml
<CustomField>
    <fullName>InterfaceID__c</fullName>
    <label>InterfaceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>