force-app/main/default/objects/API_Routing__mdt/fields/LegacySystem__c.field-meta.xml
<CustomField>
    <fullName>LegacySystem__c</fullName>
    <label>LegacySystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>