force-app/main/default/objects/API_Routing__mdt/fields/mappingDefinition__c.field-meta.xml
<CustomField>
    <fullName>mappingDefinition__c</fullName>
    <label>mappingDefinition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>