force-app/main/default/objects/API_Routing__mdt/fields/ServiceClass__c.field-meta.xml
<CustomField>
    <fullName>ServiceClass__c</fullName>
    <label>ServiceClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>